--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "netlify deploy --prod"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +18,11 @@
     "express": "^4.19.2",
     "fast-csv": "^5.0.1",
     "fs": "^0.0.1-security",
+    "netlify-cli": "^17.34.1",
+    "netlify-lambda": "^2.0.16",
     "p-limit": "^6.1.0",
     "proxy-agent": "^6.4.0",
-    "puppeteer": "^23.1.0",
+    "serverless-http": "^3.2.0",
     "url": "^0.11.4",
     "xml2js": "^0.6.2"
   }
